--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
-  "name": "hkjport",
+  "name": "vite-project",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
+
+  "engines": {
+    "node": ">=18.18.0"
+  },
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
+
   "dependencies": {
-    "gsap": "^3.12.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "gsap": "^3.14.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^7.13.0",
     "three": "^0.183.0"
   },
+
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "vite": "^5.4.8"
+    "@eslint/js": "^9.39.1",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "vite": "^7.3.1"
   }
 }
